# draft.python.api

./: .gitignore  Makefile  README.md  docker-compose.ci.yaml  gunicorn.conf.py  main.py  pyproject.toml
.github/actions/bring-up-compose/: action.yaml
.github/actions/read-tfvars/: action.yaml
.github/workflows/: ci.yaml  commitlint.config.json  pre-setup.yaml
deploy/: providers.tf  service.tf  variables.tf
deploy/vars/: service.tfvars.json
docker/: Dockerfile  entrypoint.sh
migrations/: env.py  models.py
migrations/versions/: 00697b4a0f9f_.py
pkgs/: time.py
src/draftpythonapi/: config.py  exceptions.py
src/draftpythonapi/db/: __init__.py  base.py  config.py  engine.py  uow.py
src/draftpythonapi/logger/: config.py
src/identity/: api.py  di.py  domain.py  dto.py  enum.py  jwks.py  repository.py  usecase.py
src/infra/: config.py
src/tests/: test_draft.py
tf-deploy/: variables.tf
tf-deploy/vars/: service.tfvars
